Fix jumpy arrow

--- a/indico/web/client/js/custom_elements/tips.scss
+++ b/indico/web/client/js/custom_elements/tips.scss
@@ -94,7 +94,7 @@ ind-with-toggletip {
   }
 
   // Arrows
-  &[shown]::after {
+  &[shown]:not([data-position-check])::after {
     --arrow-size: 0.5em;
 
     content: '';
